--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 CLIENT_URL=http://localhost:3000
 
 # Database
-DATABASE_URL="mysql://user:password@localhost:3306/database_name"
+DATABASE_URL="file:./prisma/dev.db"
 
 # JWT Secrets
 JWT_SECRET="generate-with-openssl-rand-base64-32"
